# FenDL

./: CMakeLists.txt  FenDL.hxx  Main.cxx  README.md  library.h  sfsd.txt
dependencies/SFML-2.6.1/doc/: SFML.tag
dependencies/SFML-2.6.1/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clipboard_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Cursor_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  GpuPreference_8hpp.html  GpuPreference_8hpp_source.html  Graphics_2Export_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  (+379 more)
dependencies/SFML-2.6.1/doc/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  enumvalues_11.js  enumvalues_12.js  enumvalues_13.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_b.js  enumvalues_c.js  enumvalues_d.js  enumvalues_f.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  functions_d.js  (+1 more)
dependencies/eigen-3.4.0/demos/mix_eigen_and_c/: binary_library.h
dependencies/eigen-3.4.0/doc/examples/: QuickStart_example.cpp  make_circulant.cpp.main  make_circulant2.cpp  matrixfree_cg.cpp
dependencies/eigen-3.4.0/test/: incomplete_cholesky.cpp  nomalloc.cpp  product_large.cpp
include/: ActivationFunction.hxx  Layer.hxx  LossFunction.hxx  NeuralNetwork.hxx  Optimizer.hxx
include/ActivateFunctions/: ActivationFunction.hxx  ELU.cxx  ELU.hxx  LReLU.cxx  LReLU.hxx  ReLU.cxx  ReLU.hxx  Sigmoid.cxx  Sigmoid.hxx  Thangh.cxx  Thangh.hxx
include/FenDL/: ActivateFunction.hxx  Branch.hxx  Config.hxx  FenDL.hxx  Layer.hxx  Logging.hxx  LossFunction.hxx  NeuralNetwork.hxx  Optimizer.hxx  TrainerStrategy.hxx
include/FenDL/ActivateFunctions/: Arctg.hxx  Benti.hxx  ELU.hxx  Gh.hxx  ISRLU.hxx  ISRU.hxx  LReLU.hxx  Linear.hxx  RELU.hxx  ReLU.hxx  SELU.hxx  SiLU.hxx  Sigmoid.hxx  Sin.hxx  Sinc.hxx  SoftPlus.hxx  Softsign.hxx  Th.hxx  Thangh.hxx
include/FenDL/Layers/: ConvolutionalLayer.hxx  DenseLayer.hxx  Layer.hxx  PerceptronLayer.hxx
include/FenDL/LossFunctions/: CrossEntropy.hxx  SquareError.hxx
include/FenDL/NeuralNetworks/: FunctionalModel.hxx  SequentionalModel.hxx
include/FenDL/Optimizers/: ADAM.hxx  Adadelta.hxx  Adagrad.hxx  BFGS.hxx  BFP.hxx  GD.hxx  RMSProp.hxx  SGD.hxx
include/Layer/: ConvolutionalLayer.cxx  ConvolutionalLayer.hxx  DenseLayer.cxx  DenseLayer.hxx  Layer.hxx  PoolingLayer.cxx  PoolingLayer.hxx  RecurrentLayer.cxx  RecurrentLayer.hxx
include/LossFunctions/: CrossEntropy.cxx  CrossEntropy.hxx  LossFunction.hxx  SquareError.cxx  SquareError.hxx
include/NeuralNetwork/: functionalmodel.cxx  functionalmodel.hxx  sequentionalmodel.cxx  sequentionalmodel.hxx
include/NeuronNetwork/: functionalmodel.cxx  sequentionalmodel.cxx  sequentionalmodel.hxx
include/Optimizer/: ADAM.cxx  ADAM.hxx  BFGS.cxx  BFGS.hxx  BFP.cxx  BFP.hxx  GD.cxx  GD.hxx  SGD.cxx  SGD.hxx
src/: Branch.cxx  Logging.cxx  NeuralNetwork.cxx  Optimizer.cxx  TrainerStrategy.cxx
src/ActivateFunctions/: Arctg.cxx  Benti.cxx  ELU.cxx  Gh.cxx  ISRLU.cxx  ISRU.cxx  LReLU.cxx  Linear.cxx  RELU.cxx  ReLU.cxx  SELU.cxx  SiLU.cxx  Sigmoid.cxx  Sin.cxx  Sinc.cxx  SoftPlus.cxx  Softsign.cxx  Th.cxx  Thangh.cxx
src/Layers/: ConvolutionalLayer.cxx  DenseLayer.cxx  PerceptronLayer.cxx  PoolingLayer.cxx  RecurrentLayer.cxx
src/LossFunctions/: CrossEntropy.cxx  SquareError.cxx
src/NeuralNetworks/: FunctionalModel.cxx  SequentionalModel.cxx
src/Optimizers/: ADAM.cxx  Adadelta.cxx  Adagrad.cxx  BFGS.cxx  BFP.cxx  GD.cxx  RMSProp.cxx  SGD.cxx
